# vortex-rust-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md
.claude/: implementation-guide.md
examples/: basic_usage.rs
src/: client.rs  error.rs  lib.rs  types.rs  webhook_types.rs  webhooks.rs
tests/: test_accept_invitations.rs
tests/integration/: happypath_integration_test.rs  revoke_integration_test.rs.disabled
